--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "5.0.0",
+    "redux": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
